# dex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/c/: luxdex_c.cpp  luxdex_c.h  lx_c.h  lx_full_c.cpp
bindings/go/: orderbook.go  orderbook_cgo.go
bindings/go/lx/: lx.go  lx_test.go
client/c/: README.md
client/c/src/: main.c
client/cpp/: CMakeLists.txt  README.md
client/cpp/src/: main.cpp
docs/: .gitignore  next.config.mjs  package-lock.json  package.json
docs/.source/: index.ts
docs/app/: layout.tsx  page.tsx
docs/content/docs/: index.mdx  installation.mdx  meta.json
include/lux/: book.hpp  engine.hpp  feed.hpp  lx.hpp  oracle.hpp  order.hpp  orderbook.hpp  pool.hpp  trade.hpp  types.hpp  vault.hpp
sdk/c/: CMakeLists.txt  README.md  lxdex.pc.in
sdk/c/examples/: basic.c
sdk/c/include/: lx.h  lxdex.h
sdk/c/src/: client.c  json.c  orderbook.c
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: basic.cpp
sdk/cpp/include/lx/: client.hpp  orderbook.hpp  types.hpp
sdk/cpp/include/lxdex/: client.hpp  orderbook.hpp  types.hpp
sdk/cpp/src/: client.cpp  orderbook.cpp
sdk/trading-c/: CMakeLists.txt
sdk/trading-c/include/lx_trading/: math.h  orderbook.h  risk.h  types.h
sdk/trading-c/src/: math.c  orderbook.c  risk.c  types.c
sdk/trading-cpp/: CMakeLists.txt  README.md
sdk/trading-cpp/examples/: arbitrage_bot.cpp  basic.cpp  orderbook_demo.cpp
sdk/trading-cpp/include/lx/trading/: adapter.hpp  client.hpp  config.hpp  execution.hpp  math.hpp  orderbook.hpp  risk.hpp  types.hpp
sdk/trading-cpp/include/lx/trading/adapters/: ccxt.hpp  hummingbot.hpp  native.hpp
sdk/trading-cpp/include/lx/trading/arbitrage/: arbitrage.hpp  cross_chain.hpp  lx_first.hpp  scanner.hpp  types.hpp  unified.hpp
sdk/trading-cpp/src/: adapter.cpp  ccxt_adapter.cpp  client.cpp  config.cpp  execution.cpp  hummingbot_adapter.cpp  math.cpp  native_adapter.cpp  orderbook.cpp  risk.cpp  types.cpp
sdk/trading-cpp/src/arbitrage/: cross_chain.cpp  lx_first.cpp  scanner.cpp  types.cpp  unified.cpp
sdk/trading-cpp/tests/: test_math.cpp  test_orderbook.cpp  test_risk.cpp  test_types.cpp
src/: book.cpp  engine.cpp  feed.cpp  lx.cpp  matching.cpp  oracle.cpp  orderbook.cpp  pool.cpp  vault.cpp
test/: test_main.cpp  test_vault.cpp
tests/: test_feed  test_feed.cpp
